--- a/assets/master.css
+++ b/assets/master.css
@@ -2,7 +2,12 @@
 
 /* use this stylesheet on all pages to maintain consistency */
 
-h1 {
+body {
+  margin: 2rem;
+  background-color: #E7C4A8;
+}
+
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Paprika', cursive;
 }
 
