--- a/assets/resources.css
+++ b/assets/resources.css
@@ -35,6 +35,16 @@ a:hover {
     text-decoration-style: wavy;
     color: #ccaa8f;
 }
+/*
+a {
+  text-decoration: none;
+  color: #E7C4A8;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #E7C4A8;
+}*/
 
 .videos {
     color: #8a491f;
@@ -45,4 +55,8 @@ iframe {
     display: block;
     margin: auto;
     padding: 1rem;
+}
+
+.home {
+  margin-right: 80%;
 }
